--- a/demo.htm
+++ b/demo.htm
@@ -6,16 +6,31 @@
             $(function () {
                 var s = "#sideline";
                 var canvas = $(s)[0];
-                var point = null;
-                var start = null;
-                var end = null;
+                var point,start,end, mouseDownPoint = null;
                 var ctx = canvas.getContext("2d");
                 var leftRightLeft = $("#lrl");     
                 var startStats = $("#start");     
                 var endStats = $("#end");     
                 var pointStats = $("#point");          
                 
-                $(s).click(function(e) {
+                $(s).mousedown(function(e) {
+                    mouseDownPoint = new P(e.pageX-canvas.offsetLeft-1, e.pageY-canvas.offsetTop-1);
+                    drawPoint(mouseDownPoint, 3);
+                });
+                $(s).mouseup(function(e) {
+                    var upP = new P(e.pageX-canvas.offsetLeft-1, e.pageY-canvas.offsetTop-1);
+                    if (mouseDownPoint.x == upP.x && mouseDownPoint.y == upP.y) {
+                        point = mouseDownPoint;
+                    }
+                    else {
+                        start = mouseDownPoint;
+                        end = upP;
+                    }
+                    leftRightLeft.text(areCrossed());
+                    draw();
+                });
+                
+/*                $(s).click(function(e) {
                     point = new P(e.pageX-canvas.offsetLeft-1, e.pageY-canvas.offsetTop-1);
                     leftRightLeft.text(areCrossed());
                     draw();
@@ -30,7 +45,7 @@
                         end = new P(e.pageX-canvas.offsetLeft-1, e.pageY-canvas.offsetTop-1);
                     }
                     draw();
-                });
+                });*/
                 function draw() {
                     ctx.clearRect(0, 0, canvas.width, canvas.height);
                     if (start) {
